[gd_scene load_steps=2 format=3 uid="uid://yweftwdkos12"]

[ext_resource type="Script" uid="uid://by2lh1e38nq34" path="res://components/scene_managers/pause_manager.gd" id="1_k5a5s"]

[node name="PauseScreen" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k5a5s")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
process_mode = 3
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="ContinueButton" type="Button" parent="CenterContainer/VBoxContainer"]
process_mode = 3
custom_minimum_size = Vector2(800, 100)
layout_mode = 2
size_flags_horizontal = 4
text = "Continue"

[node name="RestartButton" type="Button" parent="CenterContainer/VBoxContainer"]
process_mode = 3
custom_minimum_size = Vector2(800, 100)
layout_mode = 2
size_flags_horizontal = 4
text = "Restart"

[node name="MenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
process_mode = 3
custom_minimum_size = Vector2(800, 100)
layout_mode = 2
size_flags_horizontal = 4
text = "Main Menu
"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
